--- a/medicos/conexion_bbdd_medicos.ipynb
+++ b/medicos/conexion_bbdd_medicos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,17 @@
     "import cx_Oracle\n",
     "pd.options.display.max_rows\n",
     "from sqlalchemy.engine import create_engine\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.cluster import KMeans\n",
+    "import pickle\n",
+    "import json\n",
     "import os\n",
     "import sys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +56,7 @@
        "'c:\\\\Users\\\\devbanmedica\\\\anaconda3\\\\envs\\\\ml_sub3.8'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -195,12 +199,10 @@
        "REGION_TRABAJO                               0\n",
        "INSTITUCION                                  0\n",
        "TIPO_INSTITUCION                             0\n",
-       "probabilidad_querellado                      0\n",
-       "grupo_riesgo                                 0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +370,7 @@
        "[25465 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,10 +382,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from configuracion import config, write_model, read_model\n",
+    "import joblib\n",
+    "\n",
+    "from dict_categoricas_medicos import dict_categoricas_medicos\n",
+    "\n",
+    "carpeta_modelo_medicos_generales = config[\"carpeta_modelo_medicos_generales\"]\n",
+    "carpeta_modelo_medicos_psiquiatria = config[\"carpeta_modelo_medicos_psiquiatria\"]\n",
+    "\n",
+    "def leer_mejor_modelo(carpeta_modelos):\n",
+    "    modelos = []\n",
+    "    modelos_acc = []\n",
+    "    for path in os.listdir(carpeta_modelos):\n",
+    "        if os.path.isfile(os.path.join(carpeta_modelos, path)):\n",
+    "            if(\"modelo\" not in path):\n",
+    "                modelos.append(path)\n",
+    "    for p in modelos:\n",
+    "        i = 1\n",
+    "        if(\"normal\" in p):\n",
+    "            i = i+1\n",
+    "        acc = p.split(\"_\")[i]\n",
+    "        accP = p.split(\"_\")[i+1]\n",
+    "        accN = p.split(\"_\")[i+2]\n",
+    "        if((\"apertura\" in p) and (\"normal\" in p)): # filtro de modelos\n",
+    "            modelos_acc.append({\"acc\":acc, \"accP\":accP, \"accN\":accN, \"path\":p})\n",
+    "    sorted(modelos_acc, key=lambda i: (i['acc'], i['accN'])) # ordena modelos de peor a mejor\n",
+    "    return carpeta_modelos + \"/\" + modelos_acc[-1][\"path\"] # retorna el ultimo (mejor) elemento de la lista de modelos\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\devbanmedica\\anaconda3\\envs\\ml_sub3.8\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.1.3 when using version 0.24.2. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\devbanmedica\\anaconda3\\envs\\ml_sub3.8\\lib\\site-packages\\sklearn\\base.py:310: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 1.1.3 when using version 0.24.2. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'Series' objects are mutable, thus they cannot be hashed",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 28\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[39mif\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mQUERELLADOS\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m!=\u001b[39m i):            \n\u001b[0;32m     27\u001b[0m     \u001b[39mif\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mlist\u001b[39m(dict_categoricas_medicos\u001b[39m.\u001b[39mkeys()):\n\u001b[1;32m---> 28\u001b[0m         val \u001b[39m=\u001b[39m dict_categoricas_medicos[i][medico[i]]\n\u001b[0;32m     29\u001b[0m         valores_medico\u001b[39m.\u001b[39mappend(val)\n\u001b[0;32m     30\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "File \u001b[1;32mc:\\Users\\devbanmedica\\anaconda3\\envs\\ml_sub3.8\\lib\\site-packages\\pandas\\core\\generic.py:1668\u001b[0m, in \u001b[0;36mNDFrame.__hash__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1667\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__hash__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m-> 1668\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\n\u001b[0;32m   1669\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mrepr\u001b[39m(\u001b[39mtype\u001b[39m(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\u001b[39m}\u001b[39;00m\u001b[39m objects are mutable, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1670\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mthus they cannot be hashed\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1671\u001b[0m     )\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'Series' objects are mutable, thus they cannot be hashed"
+     ]
+    }
+   ],
+   "source": [
+    "tipo_modelo =1\n",
+    "tipo_modelo =2\n",
+    "tipo_medico =1\n",
+    "tipo_medico =2\n",
+    "medico=prueba_medicos\n",
+    "\n",
+    "if(tipo_modelo == 1): # seguro\n",
+    "    carpeta_tipo_modelo = \"seguros\"\n",
+    "else: # exploratorio\n",
+    "    carpeta_tipo_modelo = \"exploratorios\"\n",
+    "\n",
+    "carpeta_modelos = \"\"\n",
+    "if(tipo_medico == 1): # medico general\n",
+    "    carpeta_modelos = carpeta_modelo_medicos_generales+\"/\"+carpeta_tipo_modelo\n",
+    "else: # medico psiquiatria\n",
+    "    carpeta_modelos = carpeta_modelo_medicos_psiquiatria+\"/\"+carpeta_tipo_modelo\n",
+    "\n",
+    "path_modelo = leer_mejor_modelo(carpeta_modelos)\n",
+    "\n",
+    "loaded_rf = joblib.load(f\"{path_modelo}_modelo\")\n",
+    "lista_col = read_model(f\"{path_modelo}\")\n",
+    "\n",
+    "valores_medico = []\n",
+    "for i in lista_col:\n",
+    "    if(\"QUERELLADOS\" != i):            \n",
+    "        \n",
+    "        if i in list(dict_categoricas_medicos.keys()):\n",
+    "            val = dict_categoricas_medicos[i][medico[i]]\n",
+    "            valores_medico.append(val)\n",
+    "        else:\n",
+    "            valores_medico.append(medico[i])\n",
+    "\n",
+    "predictions_prob = loaded_rf.predict_proba([valores_medico])[0][1]\n",
+    "predictions_pred = loaded_rf.predict([valores_medico])[0]"
+   ]
   },
   {
    "cell_type": "code",
